# swig-python-demo

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py
src/example/: __init__.py  _meta.py  example.c  example.h  example.i  stl_example.cpp  stl_example.hpp  stl_example.i
tests/: test_example.py  test_stl_example.py
