[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
          --cov example
          --flake8
python_files = tests/*
flake8-ignore = example.py ALL
                stl_example.py ALL
                tests/* ALL

[coverage:run]
omit = **/example.py
       **/stl_example.py
